feat: add immutable application activity history [skip ci]
